[package]
name = "nri-sync"
version = "1.0.0"
authors = ["kav"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
hyper = "0.13"
hyper-rustls = "0.21.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
bytes = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
base64 = "0.12.3"